2011-02-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (query-yes-or-no): New function.

	* src/clfswm-configuration.lisp (reset-all-config-variables): New
	function and menu entry.
	(query-conf-value): Add the ability to leave the field blank to
	reset the variable to its default value.

2011-02-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-configuration.lisp
	(add-all-configuration-default-value): Add a default value to
	configurable variables.

2011-02-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Create the configuration
	menu only once at startup.

2011-02-22  Desmond O. Chang <dochang@gmail.com>

	* contrib/amixer.lisp: Add a volume mode inspired by the emms
	volume package. Alsa mixer interface.

	* contrib/volume-mode.lisp: Add a volume mode inspired by the emms
	volume package.

2011-02-22 Desmond O. Chang <dochang@gmail.com>

	* src/clfswm.lisp (main): Use ASDF:SYSTEM-SOURCE-DIRECTORY instead
	of *LOAD-TRUENAME*. *LOAD-TRUENAME* is only bound during a call to
	LOAD. If one eval CLFSWM:MAIN in repl, BASE-DIR will be an empty
	string. Use ASDF:SYSTEM-SOURCE-DIRECTORY to fix it.

2011-02-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Add a close hook. And close
	the notify window, the virtual keyboard and the clfswm terminal by
	default.

2011-02-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Destroy the notify window
	before closing the display. This fix a bug when resetting/reloading
	clfswm.

2011-02-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (equal-wm-class-fun, equal-wm-name-fun)
	(raise-window-fun, raise-and-focus-window-fun): New functions.

	* src/config.lisp (*clfswm-terminal-cmd*): Switch from xterm to
	urxvt.
	(*never-managed-window-list*): Structure change to be more
	flexible. Let the choice to focus, raise and do nothing on never